--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "selfkey-token",
   "version": "1.1.0",
-  "description": "The SelfKey Token is an ERC20 standard token that is used to fuel the SelfKey KYC dapps",
+  "description":
+    "The SelfKey Token is an ERC20 standard token that is used to fuel the SelfKey KYC dapps",
   "main": "truffle.js",
   "directories": {
     "test": "test",
@@ -14,7 +15,7 @@
   "dependencies": {
     "bip39": "^2.5.0",
     "ethereumjs-wallet": "^0.6.0",
-    "web3": "^0.20.4",
+    "web3": "^0.20.5",
     "web3-provider-engine": "^8.6.1",
     "zeppelin-solidity": "^1.6.0"
   },
@@ -38,7 +39,8 @@
   "scripts": {
     "precommit": "lint-staged",
     "prettier": "prettier --single-quote --no-semi --write '**/*.{js,json}'",
-    "eslint-check": "eslint --print-config .eslintrc.js | eslint-config-prettier-check",
+    "eslint-check":
+      "eslint --print-config .eslintrc.js | eslint-config-prettier-check",
     "test": "truffle test",
     "test:cov": "solidity-coverage",
     "lint:sol": "solhint contracts/**/*.sol",
@@ -46,10 +48,7 @@
     "deploy:ropsten": "truffle migrate --network ropsten -f 2"
   },
   "lint-staged": {
-    "**/*.{js,json}": [
-      "prettier --singlequote --no-semi --write",
-      "git add"
-    ]
+    "**/*.{js,json}": ["prettier --singlequote --no-semi --write", "git add"]
   },
   "repository": "https://github.com/SelfKeyFoundation/selfkey-token",
   "keywords": [
