--- a/package.json
+++ b/package.json
@@ -1,71 +1,43 @@
 {
-  "name": "selfkey-token",
-  "version": "1.1.0",
-  "description":
-    "The SelfKey Token is an ERC20 standard token that is used to fuel the SelfKey KYC dapps",
+  "name": "gdpr-cash",
+  "version": "0.1.0",
+  "description": "The GDPR Cash is an ERC20 standard token",
   "main": "truffle.js",
   "directories": {
     "test": "test",
     "contracts": "contracts"
   },
-  "engines": {
-    "node": "9.5.0",
-    "npm": "5.6.0"
-  },
   "dependencies": {
-    "bip39": "^2.5.0",
-    "ethereumjs-wallet": "^0.6.0",
-    "web3": "^0.20.5",
-    "web3-provider-engine": "^8.6.1",
+    "truffle-hdwallet-provider": "0.0.3",
     "zeppelin-solidity": "^1.6.0"
   },
   "devDependencies": {
-    "eslint": "^4.17.0",
-    "eslint-config-prettier": "^2.8.0",
-    "eslint-config-standard": "^11.0.0-beta.0",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-mocha": "^4.11.0",
-    "eslint-plugin-node": "^6.0.0",
-    "eslint-plugin-prettier": "^2.3.1",
-    "eslint-plugin-promise": "^3.6.0",
-    "eslint-plugin-standard": "^3.0.1",
-    "faker": "^4.1.0",
-    "husky": "^0.14.3",
-    "lint-staged": "^6.1.0",
-    "prettier": "^1.10.2",
     "solhint": "^1.1.10",
     "solidity-coverage": "^0.4.9"
   },
   "scripts": {
-    "precommit": "lint-staged",
-    "prettier": "prettier --single-quote --no-semi --write '**/*.{js,json}'",
-    "eslint-check":
-      "eslint --print-config .eslintrc.js | eslint-config-prettier-check",
     "test": "truffle test",
     "test:cov": "solidity-coverage",
     "lint:sol": "solhint contracts/**/*.sol",
-    "lint:js": "eslint test/**/*.js",
-    "deploy:ropsten": "truffle migrate --network ropsten -f 2"
+    "deploy:ropsten": "truffle migrate --network ropsten -f 2",
+    "deploy:rinkeby": "truffle migrate --network rinkeby -f 2"
   },
-  "lint-staged": {
-    "**/*.{js,json}": ["prettier --singlequote --no-semi --write", "git add"]
-  },
-  "repository": "https://github.com/SelfKeyFoundation/selfkey-token",
+  "repository": "",
   "keywords": [
     "ethereum",
     "ERC20",
     "crowdsale",
-    "SelfKeyFoundation",
-    "Identity"
+    "GDPR",
+    "Privacy"
   ],
-  "author": "Carlos Bruguera <cbruguera@gmail.com>",
+  "author": "Choko Bokov",
   "contributors": [
-    "David Sag <david.sag@industrie.co>",
-    "Edmund To <edmund.to@industrie.co>"
+    "",
+    ""
   ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/SelfKeyFoundation/selfkey-token/issues"
+    "url": ""
   },
-  "homepage": "https://github.com/SelfKeyFoundation/selfkey-token#readme"
+  "homepage": ""
 }
